--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" >
+        <activity android:name=".activity.DM_LoginActivity" />
+        <activity android:name=".activity.JLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
